# POO2_L4_Buffy

./: .gitignore  Buffy.sly  CMakeLists.txt  Game.cpp  Game.h  Human.cpp  README.md  main.cpp
Entities/: Buffy.cpp  Buffy.h  Human.cpp  Human.h  Humanoid.cpp  Humanoid.h  Vampire.cpp  Vampire.h
GameLogic/: Action.cpp  Action.h  Convert.cpp  Convert.h  Field.cpp  Field.h  Kill.cpp  Kill.h  Move.cpp  Move.h
GameLogic/Actions/: Action.cpp  Action.h  Convert.cpp  Convert.h  Kill.cpp  Kill.h  Move.cpp  Move.h
GameLogic/Entities/: Buffy.cpp  Buffy.h  Human.cpp  Human.h  Humanoid.cpp  Humanoid.h  Vampire.cpp  Vampire.h
Utils/: ConsoleManager.cpp  ConsoleManager.h  Coordinate.cpp  Coordinate.h
documentation/: Labo4_rapport_Zwick_Maziero.docx  UML.sly
